<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item1_image"
                android:layout_width="83dp"
                android:layout_height="80dp"
                android:padding="5dp"
                app:layout_constraintEnd_toStartOf="@+id/item1"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/bloodthirster_square"
                tools:layout_editor_absoluteY="16dp"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/image_of_combined_build_item" />
            
            <ImageView
                android:id="@+id/item2_image"
                android:layout_width="68dp"
                android:layout_height="61dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item1_image"
                app:srcCompat="@drawable/bfsword_square"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/image_of_first_item" />

            <ImageView
                android:id="@+id/item3_image"
                android:layout_width="68dp"
                android:layout_height="61dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/description"
                app:layout_constraintStart_toEndOf="@+id/item2_image"
                app:layout_constraintTop_toBottomOf="@+id/item1_image"
                app:layout_constraintVertical_bias="0.493"
                app:srcCompat="@drawable/negatroncloak_square"
                android:contentDescription="@string/image_of_second_item" />

            <TextView
                android:id="@+id/item1"
                android:layout_width="276dp"
                android:layout_height="48dp"
                android:text="@string/bloodthirster"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="20dp"
                tools:ignore="MissingConstraints" />
            
            <TextView
                android:id="@+id/item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_f_sword"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item2_image"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negatron_cloak"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item3_image"
                tools:layout_editor_absoluteX="94dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/attribute1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack_damage_10"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/attribute2"
                tools:layout_editor_absoluteX="201dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/attribute2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magic_resist_20"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/description"
                tools:layout_editor_absoluteX="201dp"
                tools:ignore="MissingConstraints" />
            
            <TextView
                android:id="@+id/description"
                android:layout_width="193dp"
                android:layout_height="116dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="@string/passive_physical_damage_heals_for_33_of_the_damage_dealt_gains_a_30_maximum_health_shield_for_5_seconds_if_the_wearer_falls_below_40_maximum_health"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="198dp"
                tools:layout_editor_absoluteY="120dp"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>