<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="275dp"
    android:background="@color/darkBlue">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/gold"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/gold">


            <TextView
                android:id="@+id/buildName"
                android:layout_width="307dp"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/buildName"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toTopOf="@+id/desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.405"
                app:layout_constraintStart_toEndOf="@+id/buildImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.213" />

            <TextView
                android:id="@+id/firstItemName"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/firstItemName"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/secondItemImage"
                app:layout_constraintHorizontal_bias="0.326"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstItemImage"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/secondItemName"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/secondItemName"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/desc"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toEndOf="@+id/firstItemImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.984" />

            <TextView
                android:id="@+id/attr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:text="@string/attr1"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/attr2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/attr2"
                app:layout_constraintTop_toBottomOf="@+id/buildName"
                app:layout_constraintVertical_bias="0.916" />

            <TextView
                android:id="@+id/attr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:text="@string/attr2"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/desc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.864" />

            <TextView
                android:id="@+id/attr3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:text="@string/attr3"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toTopOf="@+id/desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/desc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="193dp"
                android:layout_height="130dp"
                android:paddingStart="1dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.99"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/buildImage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.061"
                app:srcCompat="@drawable/bloodthirster_square" />

            <ImageView
                android:id="@+id/firstItemImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buildImage"
                app:layout_constraintVertical_bias="0.454"
                app:srcCompat="@drawable/bfsword_square" />

            <ImageView
                android:id="@+id/secondItemImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/desc"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toEndOf="@+id/firstItemImage"
                app:layout_constraintTop_toBottomOf="@+id/buildImage"
                app:layout_constraintVertical_bias="0.469"
                app:srcCompat="@drawable/negatroncloak_square" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>